fix layout issue in experience

--- a/styles/_experience.scss
+++ b/styles/_experience.scss
@@ -21,9 +21,13 @@
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-    margin-right: 15px;
     box-sizing: border-box;
+}
 
+.experience-content {
+    margin: 0 20px;
+    max-width: 250px;
+    width: 100%;
 }
 
 .education__title {
